Updated styles and and solution

--- a/src/locales/en-us.json
+++ b/src/locales/en-us.json
@@ -16,6 +16,16 @@
         "button_login": "Log in",
         "login_title": "Login Panel"
     },
+    "admin": {
+        "err_invalid_form": "Inputs must not be null",
+        "header": "Project Input",
+        "input_title": "Title",
+        "input_description": "Description",
+        "input_tags": "Tags",
+        "input_version": "Version",
+        "button_accept": "Post",
+        "button_delete": "Delete"
+    },
     "nav": {
         "home": "Home",
         "dashboard": "Dashboard",
