--- a/src/locales/es-es.json
+++ b/src/locales/es-es.json
@@ -16,6 +16,16 @@
         "button_login": "Entrar",
         "login_title": "Panel de Acceso"
     },
+    "admin": {
+        "err_invalid_form": "Elementos no pueden estar vacíos",
+        "header": "Project Input",
+        "input_title": "Título",
+        "input_description": "Descripción",
+        "input_tags": "Tags",
+        "input_version": "Versión",
+        "button_accept": "Publicar",
+        "button_delete": "Eliminar"
+    },
     "nav": {
         "home": "Inicio",
         "dashboard": "Dashboard",
